making To-Do with styling

--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <title>To-Do List</title>
 </head>
 <body>
-    
-    
-
+    <div class="container">
+        <h1>To-Do List <i class="fas fa-plus fa-1x"></i></h1>
+        <input class="todo" type="text" name="todo" id="todo" placeholder="Create New To-Do">
+        <ul class="todos">
+            <!-- <li><span><i class="far fa-trash-alt fa-1.5x"></i></span> </li>
+            <li><span><i class="far fa-trash-alt fa-1.5x"></i></span> </li>
+            <li><span><i class="far fa-trash-alt fa-1.5x"></i></span> </li>
+            <li><span><i class="far fa-trash-alt fa-1.5x"></i></span> </li> -->
+        </ul>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/70401da5f8.js" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
