--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 <body>
     <div class="container">
+        <p>Instructions: Track Your Schedule <br>
+            Create new todos, Use single click to 
+            untrack your todo. For remove todo from 
+            list use delete button.
+        </p>
         <h1>To-Do List <i class="fas fa-plus fa-1x"></i></h1>
         <input class="todo" type="text" name="todo" id="todo" placeholder="Create New To-Do">
         <ul class="todos">
