added styling on Instructions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <p>Instructions: Track Your Schedule <br>
+        <p><span>Instructions: </span> Track Your Schedule <br>
             Create new todos, Use single click to 
             untrack your todo. For remove todo from 
             list use delete button.
